--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background: url('E:/A-level/Lesson2/Lesson2/img/background_01.jpg'); background-size: 100%;">
 	<img style="display:block; margin: 0 auto; padding-bottom: 15px;" src="E:/A-level/Lesson2/Lesson2/img/main-fish.png" alt="Рыба сайт" title="Main fish" width="500"; height="180";>
 	<div style="text-align: justify; width: 100%">
-        <h1 style="text-align: center;">РЫБА - ОТЛИЧНЫЙ ПОМОЩНИК В НАПИСАНИИ ТЕКСТОВ</h1>
+        <h1 style="text-align: center;">РЫБА TEКСТ - ОТЛИЧНЫЙ ПОМОЩНИК В НАПИСАНИИ ТЕКСТОВ</h1>
         <img style="float: left; width: 300px; height: 350px; padding: 5px;" src="E:/A-level/Lesson2/Lesson2/img/cat-fish.jpg" alt="Кот-рыба" title="Cat Fish";>
 
     		<p>С другой стороны новая модель организационной деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития. <strong>Товарищи!</strong> реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности обеспечивает широкому кругу (<em>специалистов</em>) участие в формировании направлений прогрессивного развития.</p>
